manifests/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: odh-dashboard
spec:
  parentRefs:
    - name: gateway-name
      kind: Gateway
      namespace: openshift-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: odh-dashboard
          port: 8443
