manifests/base/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload       
  name: odh-dashboard
spec:
  port:
    targetPort: 8443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: odh-dashboard
    weight: 100
